Bug 142564 - LO72a1: the "Extensions: Templates" window title is only partly localizable
Summary: LO72a1: the "Extensions: Templates" window title is only partly localizable
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.2.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Gabor Kelemen (Collabora)
URL:
Whiteboard: target:7.4.0
Keywords:
Depends on:
Blocks: Not-Localizable
  Show dependency treegraph
 
Reported: 2021-05-30 12:32 UTC by Martin Srebotnjak
Modified: 2022-01-12 23:17 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Window title with English word "Templates" (788.50 KB, image/png)
2021-06-14 07:22 UTC, Martin Srebotnjak
Details
The Template extensions dialog after the proposed patch in qtz locale (137.73 KB, image/png)
2022-01-11 22:34 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Srebotnjak 2021-05-30 12:32:32 UTC
Description:
Opening the "Manage Templates" window in Writer and then clicking the "Extensions" button bottom right opens the "Extensions: Templates" window.
Its title in Slovenian appears as "Razširitve: Templates" and not as "Razširitve: predloge", which means that the "Templates" part in it is not localizable (LO72a1 is fully localized in Slovenian).

Steps to Reproduce:
1. Open a localized LO72a1 Writer with an empty document.
2. In Menu bar select File > Templates > Manage Templates.
3. In the "Manage Templates" click the "Extensions" button bottom right.
4. See the "localized" title of the opened "Extensions: Templates" window.

Actual Results:
The "Templates" part is not localized.

Expected Results:
Should be localizable.


Reproducible: Always


User Profile Reset: No



Additional Info:
Also, it is really time to make the Extensions website localizable (this was promised as the old design/site was dumped).
Comment 1 Martin Srebotnjak 2021-06-14 07:22:14 UTC
Created attachment 172854 [details]
Window title with English word "Templates"

Here is a screenshot. Note that you need to have an open document for the Extensions button to open this window (otherwise it remains greyed out).
Comment 2 Martin Srebotnjak 2021-07-26 14:20:16 UTC
I am sorry, Roman, this bug is not a localization bug, it is a UI bug - a string is not localizable and the GUI authors need to make it localizable.
L10n bugs are the bugs where localization is wrong, missing etc. and are meant for l10n teams ...
I have filed tens of hundreds of these bugs and all were/are tagged as UI bugs.
Comment 3 Gabor Kelemen (Collabora) 2022-01-11 19:02:29 UTC
Confirming in

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: bf883027ee62ece0844730572305094f53daa521
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded

There are several places where this dialog is available with different extension types and title strings:
- Templates dialog - Manage - Extensions -> Templates
- Gallery sidebar: bottom right button -> Gallery
- Area format dialog - Color category button - next to palette picker -> Color Palette (although this category does not give results in the dialog - another issue, there are downloadable color palettes: https://extensions.libreoffice.org/?Tags%5B%5D=51 )
- Options - View - next to Icon style dropdown -> Icons
- Tools - Language - More Dictionaries Online menu -> Dictionary
Comment 4 Gabor Kelemen (Collabora) 2022-01-11 22:34:25 UTC
Created attachment 177471 [details]
The Template extensions dialog after the proposed patch in qtz locale

Proposed patch: https://gerrit.libreoffice.org/c/core/+/128305
Comment 5 Commit Notification 2022-01-12 01:41:50 UTC
Gabor Kelemen committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b957454e5ed46029ea0ca06a7d345d9608bfa4a1

tdf#142564 Localize extension category names

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Gabor Kelemen (Collabora) 2022-01-12 23:17:07 UTC
This is fixed in master, too late to backport to 7.3.