tdf#142564 Localize extension category names

Change-Id: I57ca7cb194bd325f621841edc24e3af9ef7c3b3e